- Add basic check for a correct installation of the RKWard resource files
- Remove "What to expect" dialog at startup
- Make keyboard shorcuts configurable
- Add option to add only single line commands from script editor to the console history
- Add action to change working directory to that of the current script file
- Fixed: No warning was shown, when an open script file was changed on disk, externally
- Fixed: Opening most file types (e.g. PDF) from the help browser was broken
- Fixed: Make built-in editor work again for file.edit ()
- (Almost) all plugins now write a header to the output window		TODO: work in progress; which ones should not?
- Add convenience function "makeHeaderCode()" for use inside plugins	TODO: document, adjust for tests (->rk.describe.alternative())
- Adjust some icons
- Plugins can be invoked from R code (mostly for internal purposes)
- Add "Run again" link for plugin generated output		TODO: revisit plugins without header
- Fixed: All objects in .Globalenv would be revisited if a single object was added / removed		TODO: backport? (r2466, 2473)
- Fixed: Screen device in rkward was not seen as interactive by R

--- Version 0.5.0d - May-10-2009
- Fixed: Container of detached windows would sometimes remain after reattaching
- Fixed: Global toolbar style was not honored
- Fixed: Auto-scroll missing in progress dialogs and data editor
- Fix jumping toolbar
- Fixed: Several harmless warnings were silenced
- Fixed: Argument hints would always stay on top regardless of focus
- Fix crash when reaching bottom of command history in context sensitive search
- Fix crash while inserting rows in a data.frame with string variables

--- Version 0.5.0c - Mar-30-2009
- Fix assorted installation problems
- Updated translations: German, Spanish
- Fix immediate crash issue with R 2.9.0 (requires recompilation against R 2.9)
- Fixed some shortcut problems with KDElibs 4.2.x
- Fixed: Several icons would not be loaded