@@ -1,6 +1,0 @@
-#include "R_ext/Rdynload.h"
-#include "R.h"
-
-void R_init_rkward (DllInfo *dll) {
-	// actually registering the functions will be done from RKWard. This is just a dummy function
-}
