@@ -1,3 +1,4 @@
+- Remove support for R 2.6.x and earlier		TODO: clean up more (browser, internal.R, RCallbackArgs, RData?), adjust debian control
 - Add basic check for a correct installation of the RKWard resource files
 - Remove "What to expect" dialog at startup
 - Make keyboard shorcuts configurable
